--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-args==0.1.0
-clint==0.5.1
-pkginfo==1.4.1
+appdirs==1.4.3
+docker==2.2.0
+docker-pycreds==0.2.1
+packaging==16.8
+pyparsing==2.2.0
 requests==2.13.0
-requests-toolbelt==0.7.1
-twine==1.8.1
-wheel==0.29.0
+six==1.10.0
+websocket-client==0.40.0
